platform/cluster/namespace-staging.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
    project: gke-build-proj
    environment: staging
    owner: jd
